<resources>
    <string name="app_name">Anagrama</string>
    <string name="resultado_placeholder">Parabéns! Você acertou!</string>
    <string name="palavra_placeholder">BACAAET</string>
    <string name="digite_seu_palpite">digite seu palpite</string>
    <string name="enviar">enviar</string>
    <string name="instrucao">Que fruta é essa?</string>
    <string name="fim_de_jogo">Fim de jogo!</string>
    <string name="jogar_novamente">jogar novamente</string>
    <string name="score_format">Pontuação: %d ponto(s)</string>
    <string name="game_over_score_format">Final:\n%d ponto(s)</string>
    <string name="mensagem_acerto">Parabéns, você acertou!</string>
    <string name="mensagem_erro">Lamento, você errou! A palavra era: %s</string>
</resources>